--- a/notebooks/llama_index_example.ipynb
+++ b/notebooks/llama_index_example.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "558a361b",
    "metadata": {},
    "outputs": [
@@ -43,60 +43,23 @@
      "output_type": "stream",
      "text": [
       "LLM is explicitly disabled. Using MockLLM.\n",
-      "Document ID: d1879772-7b07-4eef-8128-fe5150bcf120\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3c858eb050c48ae9c0f1a0e97bb1690",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6df17ae219a4924bd42837698670f32",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating embeddings:   0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Context information is below.\n",
-      "---------------------\n",
-      "file_path: ../data/804911c5-4bee-4359-96ea-2c1f82086f37.txt\n",
-      "\n",
-      "Johann Sebastian Bach (31 March [O.S. 21 March] 1685 – 28 July 1750) was a German composer and musician of the late Baroque period. He is known for his orchestral music such as the Brandenburg Concertos; instrumental compositions such as the Cello Suites; keyboard works such as the Goldberg Variations and The Well-Tempered Clavier; organ works such as the Schubler Chorales and the Toccata and Fugue in D minor; and vocal music such as the St Matthew Passion and the Mass in B minor. Since the 19th-century Bach revival, he has been generally regarded as one of the greatest composers in the history of Western music. He has been called the \"father of harmony\".The Bach family already counted several composers when Johann Sebastian was born as the last child of a city musician, Johann Ambrosius, in Eisenach. After being orphaned at the age of 10, he lived for five years with his eldest brother Johann Christoph, after which he continued his musical education in Lüneburg. From 1703 he was back in Thuringia, working as a musician for Protestant churches in Arnstadt and Mühlhausen and, for longer stretches of time, at courts in Weimar, where he expanded his organ repertory, and Köthen, where he was mostly engaged with chamber music. From 1723, he was employed as Thomaskantor (cantor at St Thomas's) in Leipzig. There he composed music for the principal Lutheran churches of the city, and for its university's student ensemble Collegium Musicum. From 1726, he published some of his keyboard and organ music. In Leipzig, as had happened during some of his earlier positions, he had difficult relations with his employer, a situation that was little remedied when he was granted the title of court composer by his sovereign, Augustus III of Poland, in 1736. In the last decades of his life, he reworked and extended many of his earlier compositions. He died of complications after eye surgery in 1750 at the age of 65. Bach enriched established German styles through his mastery of counterpoint, harmonic, and motivic organisation, and his adaptation of rhythms, forms, and textures from abroad, particularly from Italy and France. Bach's compositions include hundreds of cantatas, both sacred and secular. He composed Latin church music, Passions, oratorios, and motets. He often adopted Lutheran hymns, not only in his larger vocal works, but for instance also in his four-part chorales and his sacred songs. He wrote extensively for organ and for other keyboard instruments. He composed concertos, for instance for violin and for harpsichord, and suites, as chamber music as well as for orchestra. Many of his works employ the genres of canon and fugue. Throughout the 18th century, Bach was primarily valued as an organist, while his keyboard music, such as The Well-Tempered Clavier, was appreciated for its didactic qualities. The 19th century saw the publication of some major Bach biographies, and by the end of that century all of his known music had been printed. Dissemination of scholarship on the composer continued through periodicals (and later also websites) exclusively devoted to him, and other publications such as the Bach-Werke-Verzeichnis (BWV, a numbered catalogue of his works) and new critical editions of his compositions. His music was further popularised through a multitude of arrangements, including the Air on the G String and \"Jesu, Joy of Man's Desiring\", and of recordings, such as three different box sets with complete performances of the composer's oeuvre marking the 250th anniversary of his death.\n",
-      "\n",
-      "file_path: ../data/14b51be1-7344-4c97-8e75-ef75899c3d53.txt\n",
-      "\n",
-      "Franz Joseph Haydn ( HY-dən, German: [ˈfʁants ˈjoːzɛf ˈhaɪdn̩] ; 31 March 1732 – 31 May 1809) was a German Austrian composer of the Classical period. He was instrumental in the development of chamber music such as the string quartet and piano trio. His contributions to musical form have led him to be called \"Father of the Symphony\" and \"Father of the String Quartet\".Haydn spent much of his career as a court musician for the wealthy Esterházy family at their Eszterháza Castle. Until the later part of his life, this isolated him from other composers and trends in music so that he was, as he put it, \"forced to become original\". Yet his music circulated widely, and for much of his career he was the most celebrated composer in Europe. He was a friend and mentor of Mozart, a tutor of Beethoven, and the elder brother of composer Michael Haydn.\n",
-      "---------------------\n",
-      "Given the context information and not prior knowledge, answer the query.\n",
-      "Query: what kind of family was bach born into?\n",
-      "Answer: \n"
+      "Document ID: cc3a2563-4327-414d-9239-1670cf58bd74\n",
+      "Node ID: 162e5d6e-e417-41ad-8b06-2e25299618e1\n",
+      "Text: Wolfgang Amadeus Mozart (27 January 1756 – 5 December 1791) was\n",
+      "a prolific and influential composer of the Classical period. Despite\n",
+      "his short life, his rapid pace of composition resulted in more than\n",
+      "800 works of virtually every genre of his time. Many of these\n",
+      "compositions are acknowledged as pinnacles of the symphonic,\n",
+      "concertante, chamber, o...\n",
+      "Score:  0.607\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from llama_index import SimpleDirectoryReader, VectorStoreIndex, ServiceContext\n",
     "from llama_index.embeddings import GooglePaLMEmbedding\n",
+    "from llama_index.node_parser import SentenceSplitter\n",
     "\n",
     "# https://cloud.google.com/docs/authentication/api-keys\n",
     "service_context = ServiceContext.from_defaults(\n",
@@ -110,15 +73,24 @@
     "documents = SimpleDirectoryReader(path).load_data()\n",
     "print(\"Document ID:\", documents[0].doc_id)\n",
     "\n",
-    "index = VectorStoreIndex.from_documents(\n",
-    "    documents, show_progress=True, service_context=service_context,\n",
-    ")\n",
+    "parser = SentenceSplitter()\n",
+    "nodes = parser.get_nodes_from_documents(documents)\n",
     "\n",
-    "engine = index.as_query_engine()\n",
+    "index = VectorStoreIndex(nodes, service_context=service_context)\n",
     "\n",
-    "response = engine.query(\"what kind of family was bach born into?\")\n",
-    "print(str(response))"
+    "retriever = index.as_retriever()\n",
+    "\n",
+    "response = retriever.retrieve(\"Isn't micky mouse a funny guy for liking the music he likes?\")\n",
+    "print(response[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d61ed390",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
