--- a/notebooks/llama_index_example.ipynb
+++ b/notebooks/llama_index_example.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
+   "id": "cb06574b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[!] Environment is not defined, defaulting to docker\n"
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
      ]
     }
    ],
+   "source": [
+    "%load_ext dotenv\n",
+    "%dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "9fe506c0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "558a361b",
    "metadata": {},
    "outputs": [
@@ -42,31 +54,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LLM is explicitly disabled. Using MockLLM.\n",
-      "Document ID: cc3a2563-4327-414d-9239-1670cf58bd74\n",
-      "Node ID: 162e5d6e-e417-41ad-8b06-2e25299618e1\n",
-      "Text: Wolfgang Amadeus Mozart (27 January 1756 – 5 December 1791) was\n",
-      "a prolific and influential composer of the Classical period. Despite\n",
-      "his short life, his rapid pace of composition resulted in more than\n",
-      "800 works of virtually every genre of his time. Many of these\n",
-      "compositions are acknowledged as pinnacles of the symphonic,\n",
-      "concertante, chamber, o...\n",
-      "Score:  0.607\n",
-      "\n"
+      "Document ID: 8d9fcb4f-33d3-45f9-870b-8453f326e071\n",
+      "constructing nodes\n",
+      "initializing vector store index\n",
+      "loading data?\n",
+      "loaded?\n"
      ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**`Final Response:`** Johann Sebastian Bach ranks amongst the greatest Baroque composers. During his lifetime, he had a significant influence on the music scene. He enriched established German styles through his mastery of counterpoint, harmonic, and motivic organization. Bach also adapted rhythms, forms, and textures from abroad, particularly from Italy and France. His compositions include hundreds of cantatas, both sacred and secular, as well as Latin church music, Passions, oratorios, and motets. Bach's music was primarily valued for his skills as an organist, but his keyboard music, such as The Well-Tempered Clavier, was also appreciated for its didactic qualities."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**`Source Node 1/2`**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 0a36c3ac-bc77-4455-ac2a-5e0f6d39d4c5<br>**Similarity:** 0.7545058470960508<br>**Text:** Johann Sebastian Bach (31 March [O.S. 21 March] 1685 – 28 July 1750) was a German composer and musician of the late Baroque period. He is known for his orchestral music such as the Brandenburg Concertos; instrumental compositions such as the Cello Suites; keyboard works such as the Goldberg Variations and The Well-Tempered Clavier; organ works such as the Schubler Chorales and the Toccata and Fugue in D minor; and vocal music such as the St Matthew Passion and the Mass in B minor. Since the 19th-century Bach revival, he has been generally regarded as one of the greatest composers in the history of Western music. He has been called the \"father of harmony\".The Bach family already counted several composers when Johann Sebastian was born as the last child of a city musician, Johann Ambrosius, in Eisenach. After being orphaned at the age of 10, he lived for five years with his eldest brother Johann Christoph, after which he continued his musical education in Lüneburg. From 1703 he was ba...<br>**Metadata:** {'file_path': '../data/00ffed6f-4567-408f-9803-0ea5a1ce44c0.txt', 'file_name': '00ffed6f-4567-408f-9803-0ea5a1ce44c0.txt', 'file_type': 'text/plain', 'file_size': 3548, 'creation_date': '2024-01-06', 'last_modified_date': '2024-01-06', 'last_accessed_date': '2024-01-06'}<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**`Source Node 2/2`**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** a23459d0-4105-4401-bf98-3d98632cae5a<br>**Similarity:** 0.7373157695285525<br>**Text:** Gustav Mahler (German: [ˈɡʊstaf ˈmaːlɐ]; 7 July 1860 – 18 May 1911) was an Austro-Bohemian Romantic composer, and one of the leading conductors of his generation. As a composer he acted as a bridge between the 19th-century Austro-German tradition and the modernism of the early 20th century. While in his lifetime his status as a conductor was established beyond question, his own music gained wide popularity only after periods of relative neglect, which included a ban on its performance in much of Europe during the Nazi era. After 1945 his compositions were rediscovered by a new generation of listeners; Mahler then became one of the most frequently performed and recorded of all composers, a position he has sustained into the 21st century. Born in Bohemia (then part of the Austrian Empire) to Jewish parents of humble origins, the German-speaking Mahler displayed his musical gifts at an early age. After graduating from the Vienna Conservatory in 1878, he held a succession of conducting ...<br>**Metadata:** {'file_path': '../data/fc5e522b-0eee-430f-aa10-4e93c9bcb033.txt', 'file_name': 'fc5e522b-0eee-430f-aa10-4e93c9bcb033.txt', 'file_type': 'text/plain', 'file_size': 2654, 'creation_date': '2024-01-06', 'last_modified_date': '2024-01-06', 'last_accessed_date': '2024-01-06'}<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from llama_index import SimpleDirectoryReader, VectorStoreIndex, ServiceContext\n",
+    "from llama_index import SimpleDirectoryReader, VectorStoreIndex, ServiceContext, StorageContext\n",
     "from llama_index.embeddings import GooglePaLMEmbedding\n",
     "from llama_index.node_parser import SentenceSplitter\n",
+    "from llama_index.response.notebook_utils import (\n",
+    "    display_source_node,\n",
+    "    display_response,\n",
+    ")\n",
+    "from llama_index.vector_stores import PGVectorStore\n",
+    "\n",
+    "from sqlalchemy import make_url\n",
+    "import psycopg2\n",
+    "\n",
+    "connection_string = \"postgresql://postgres:postgres@localhost:5432\"\n",
+    "db_name = \"vector_db\"\n",
+    "# with psycopg2.connect(connection_string) as conn:\n",
+    "#     conn.autocommit = True\n",
+    "#     with conn.cursor() as c:\n",
+    "#         c.execute(f\"DROP DATABASE IF EXISTS {db_name}\")\n",
+    "#         c.execute(f\"CREATE DATABASE {db_name}\")\n",
+    "\n",
+    "url = make_url(connection_string)\n",
+    "vector_store = PGVectorStore.from_params(\n",
+    "    database=db_name,\n",
+    "    host=url.host,\n",
+    "    password=url.password,\n",
+    "    port=url.port,\n",
+    "    user=url.username,\n",
+    "    table_name=\"composers\",\n",
+    "    embed_dim=768,\n",
+    ")\n",
+    "\n",
     "\n",
     "# https://cloud.google.com/docs/authentication/api-keys\n",
+    "api_key = os.getenv(\"GOOGLE_AI_API_KEY\")\n",
+    "\n",
+    "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "service_context = ServiceContext.from_defaults(\n",
-    "    llm=None,\n",
     "    embed_model=GooglePaLMEmbedding(\n",
     "        model_name=\"models/embedding-gecko-001\",\n",
-    "        api_key=\"AIzaSyCiFET2t_o1rvLNSBvWMAQ8iDFAMeiIoxo\",\n",
+    "        api_key=api_key,\n",
     "    )\n",
     ")\n",
     "\n",
@@ -74,23 +194,94 @@
     "print(\"Document ID:\", documents[0].doc_id)\n",
     "\n",
     "parser = SentenceSplitter()\n",
+    "print(\"constructing nodes\")\n",
     "nodes = parser.get_nodes_from_documents(documents)\n",
     "\n",
-    "index = VectorStoreIndex(nodes, service_context=service_context)\n",
+    "print(\"initializing vector store index\")\n",
+    "print(\"loading data?\")\n",
+    "index = VectorStoreIndex(nodes, service_context=service_context, storage_context=storage_context)\n",
+    "print(\"loaded?\")\n",
+    "engine = index.as_query_engine()\n",
+    "response = engine.query(\"What people rank amongst the greatest Baroque composers and his influence during his lifetime?\")\n",
     "\n",
-    "retriever = index.as_retriever()\n",
-    "\n",
-    "response = retriever.retrieve(\"Isn't micky mouse a funny guy for liking the music he likes?\")\n",
-    "print(response[0])"
+    "display_response(\n",
+    "    response, source_length=1000, show_source=True, show_source_metadata=True\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d61ed390",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The LLM sees this: \n",
+      " Metadata: category=>finance::author=>LlamaIndex\n",
+      "-----\n",
+      "Content: This is a super-customized document\n",
+      "The Embedding model sees this: \n",
+      " Metadata: file_name=>super_secret_document.txt::category=>finance::author=>LlamaIndex\n",
+      "-----\n",
+      "Content: This is a super-customized document\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index import Document\n",
+    "from llama_index.schema import MetadataMode\n",
+    "\n",
+    "document = Document(\n",
+    "    text=\"This is a super-customized document\",\n",
+    "    metadata={\n",
+    "        \"file_name\": \"super_secret_document.txt\",\n",
+    "        \"category\": \"finance\",\n",
+    "        \"author\": \"LlamaIndex\",\n",
+    "    },\n",
+    "    excluded_llm_metadata_keys=[\"file_name\"],\n",
+    "    metadata_seperator=\"::\",\n",
+    "    metadata_template=\"{key}=>{value}\",\n",
+    "    text_template=\"Metadata: {metadata_str}\\n-----\\nContent: {content}\",\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The LLM sees this: \\n\",\n",
+    "    document.get_content(metadata_mode=MetadataMode.LLM),\n",
+    ")\n",
+    "print(\n",
+    "    \"The Embedding model sees this: \\n\",\n",
+    "    document.get_content(metadata_mode=MetadataMode.EMBED),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "30aa2bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context information is below.\n",
+      "---------------------\n",
+      "{context_str}\n",
+      "---------------------\n",
+      "Given the context information and not prior knowledge, answer the query.\n",
+      "Query: {query_str}\n",
+      "Answer: \n"
+     ]
+    }
+   ],
+   "source": [
+    "prompts_dict = engine.get_prompts()\n",
+    "\n",
+    "print(prompts_dict[\"response_synthesizer:text_qa_template\"].default_template.template)"
+   ]
   }
  ],
  "metadata": {
